# SeeChange

./: .gitignore  default_config.yaml  requirements.txt
alembic/versions/: 2025_07_01_1419-b5c481ead8af_knownexposure_state.py  2025_07_01_1936-5daf04627101_knownexposure_tz.py  (+1 more)
docs/: README.md  data_storage.md  overview.md  pipeline.md  setup.md
improc/: alignment.py  scamp.py  tools.py
models/: Makefile.am  alerts.py  base.py  calibratorfile.py  catalog_excerpt.py  decam.py  enums_and_bitflags.py  exposure.py  image.py  instrument.py  knownexposure.py  ls4cam.py  object.py  provenance.py  psf.py  reference.py  refset.py  report.py  source_list.py
pipeline/: acquire_decam_refs.py  alerting.py  alertsending.py  catalog_tools.py  coaddition.py  cutting.py  data_store.py  detection.py  exposure_processor.py  measuring.py  photo_cal.py  pipeline_exposure_launcher.py  positioner.py  preprocessing.py  ref_maker.py  scoring.py  top_level.py
share/: Makefile.am
share/SeeChange/: seechange_alert.avsc  seechange_detection.avsc  seechange_nondetection.avsc  seechange_object.avsc  seechange_source.avsc
share/avsc/: README.md  ls4.v0_2.alert.avsc  ls4.v0_2.diaForcedSource.avsc  ls4.v0_2.diaNonDetectionLimit.avsc  ls4.v0_2.diaObject.avsc  ls4.v0_2.diaSource.avsc  ls4.v0_2.ls4xgboost.avsc
tests/: conftest.py  docker-compose.yaml  seechange_config_test.yaml
util/: Makefile.am  cache.py  logger.py  retrydownload.py  retrypost.py  rkauth_client.py  util.py
webap/: Makefile  baseview.py  conductor.py  local_overrides.yaml  ltcv.py  seechange_webap.py  updater.py
(+54 files in other folders)
