sharedir = @installdir@/share
share_DATA = RBbot_models/RBbot-feasible-disco-117-config.json \
	RBbot_models/RBbot-feasible-disco-117.pth \
	RBbot_models/RBbot-quiet-shadow-131-config.json \
	RBbot_models/RBbot-quiet-shadow-131.pth \
	avsc/ls4.v0_2.alert.avsc \
	avsc/ls4.v0_2.diaNonDetectionLimit.avsc \
	avsc/ls4.v0_2.diaSource.avsc \
	avsc/ls4.v0_2.diaForcedSource.avsc \
	avsc/ls4.v0_2.diaObject.avsc \
	avsc/ls4.v0_2.ls4xgboost.avsc \
	astromatic/default.conv \
	astromatic/default.nnw \
	astromatic/detection_sextractor.param \
	astromatic/sourcelist_sextractor.param \
	astromatic/sourcelist_sextractor_with_psf.param
